# customer-churn-clustering

./: .gitignore  Readme.md  clustering.ipynb  pyproject.toml
