[tool.poetry]
name = "customer_churn_clustering"
version = "0.1.0"
description = "Illustration of the use of a random forest for the clustering of potentially churning customers"
authors = ["victorlandeau <vlandeau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
plotly = "^4.14.1"
sklearn = "^0.0"
matplotlib = "^3.3.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
